Organize input files and probably other stuff.